# harmonyCocosTestProject

./: .gitattributes  README.md
3d/: engine-native
3d/editor-native-scene/mac/: CMakeLists.txt  EditorApplication.h  EditorApplication.mm  NativeWindow.h  NativeWindow.mm  addon.mm  jsb_nativize_module.cpp  jsb_nativize_module.h  napiUtils.h
3d/editor-native-scene/win/: CMakeLists.txt  EditorApplication.cpp  NativeWindow.cpp  NativeWindow.h  Readme.md  addon.cc  addon.h  generateProject.bat  jsb_nativize_module.cpp  package.json
3d/engine/: DebugInfos.json
3d/engine/@types/: consts.d.ts
3d/engine/native/simulator/Release/SimulatorApp-Mac.app/Contents/Resources/: Assets.car
3d/engine/native/simulator/Release/SimulatorApp-Mac.app/Contents/_CodeSignature/: CodeResources
HarmonyOSTest_Brunozheng/: package.json
HarmonyOSTest_Brunozheng/assets/: HarmonyOSTest.ts
HarmonyOSTest_Brunozheng/native/engine/openharmony/: build-profile.json5  oh-package.json5
HarmonyOSTest_Brunozheng/native/engine/openharmony/.hvigor/cache/: file-cache.json  task-cache.json
HarmonyOSTest_Brunozheng/native/engine/openharmony/.hvigor/dependencyMap/: oh-package.json5
HarmonyOSTest_Brunozheng/native/engine/openharmony/.hvigor/dependencyMap/entry/: oh-package.json5
HarmonyOSTest_Brunozheng/native/engine/openharmony/.hvigor/outputs/build-logs/: build.log.2024-07-10.1  build.log.2024-07-11.1  build.log.2024-07-11.2
HarmonyOSTest_Brunozheng/native/engine/openharmony/.hvigor/outputs/logs/details/: details.json
HarmonyOSTest_Brunozheng/native/engine/openharmony/.hvigor/outputs/sync/: fileCache.json  output.json
HarmonyOSTest_Brunozheng/native/engine/openharmony/.hvigor/report/: report-202407111443530320.json  report-202407111444191870.json  report-202407111446116560.json  report-202407111447523990.json  report-202407111448229820.json  report-202407111448270350.json  report-202407111449001610.json  report-202407111450350500.json  report-202407111457114240.json  report-202407111458020020.json
HarmonyOSTest_Brunozheng/native/engine/openharmony/AppScope/resources/base/element/: string.json
HarmonyOSTest_Brunozheng/native/engine/openharmony/entry/: build-profile.json5
HarmonyOSTest_Brunozheng/native/engine/openharmony/entry/src/main/: module.json5
HarmonyOSTest_Brunozheng/native/engine/openharmony/entry/src/main/ets/cocos/: WorkerManager.ets  game.ts
HarmonyOSTest_Brunozheng/native/engine/openharmony/entry/src/main/ets/cocos/assets/main/: index.js
HarmonyOSTest_Brunozheng/native/engine/openharmony/entry/src/main/ets/cocos/src/: settings.js
HarmonyOSTest_Brunozheng/native/engine/openharmony/entry/src/main/ets/pages/: index.ets
HarmonyOSTest_Brunozheng/native/engine/openharmony/entry/src/main/ets/workers/: cocos_worker.ts
HarmonyOSTest_Brunozheng/native/engine/openharmony/entry/src/main/resources/base/element/: string.json
HarmonyOSTest_Brunozheng/native/engine/openharmony/entry/src/main/resources/rawfile/Resources/assets/main/import/08/: 08e18f2f9.json
HarmonyOSTest_Brunozheng/native/engine/openharmony/entry/src/main/resources/rawfile/Resources/assets/resources/: cc.config.json
HarmonyOSTest_Brunozheng/native/engine/openharmony/entry/src/main/resources/rawfile/Resources/assets/resources/import/d5/: d5e3514a-71db-46e7-8a40-172ee50ff22d@f9941.json
HarmonyOSTest_Brunozheng/temp/: tsconfig.cocos.json
HarmonyOSTest_Brunozheng/temp/asset-db/assets/thumbnail/d5e3514a-71db-46e7-8a40-172ee50ff22d/: d5e3514a-71db-46e7-8a40-172ee50ff22d
HarmonyOSTest_Brunozheng/temp/asset-db/internal/fbx.FBX-glTF-conv/1263d74c-8167-4928-91a6-4e2672411f47/: status.json
HarmonyOSTest_Brunozheng/temp/builder/: assets-mtime.json
HarmonyOSTest_Brunozheng/temp/programming/packer-driver/targets/editor/: assembly-record.json  import-map.json  main-record.json
HarmonyOSTest_Brunozheng/temp/programming/packer-driver/targets/preview/: assembly-record.json  import-map.json  main-record.json
HarmonyOSTest_Brunozheng/temp/scene/cache/: info.json
